Make autoplay of newly attached media in editor optional
Autoplay was removed in #749 and added back shortly afterwards.
This adds a preference to toggle this feature.

See: https://forums.ankiweb.net/t/option-controlling-autoplay-of-audio-dropped-into-card-editing-window/3863

--- a/qt/designer/preferences.ui
+++ b/qt/designer/preferences.ui
@@ -77,6 +77,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="editor_autoplay">
+         <property name="text">
+          <string>Automatically play newly attached media in editor</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="pastePNG">
          <property name="text">
           <string>Paste clipboard images as PNG</string>
